updated modal on chat view

--- a/force-app/main/default/lwc/communityAlert/communityAlert.html
+++ b/force-app/main/default/lwc/communityAlert/communityAlert.html
@@ -11,11 +11,9 @@
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
             focusable="false"
-            role="img"
-            aria-labelledby="title-ro"
+            aria-hidden="true"
             class="navds-alert__icon"
         >
-            <title id="title-ro">Informasjon</title>
             <path
                 fill-rule="evenodd"
                 clip-rule="evenodd"
