--- a/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
+++ b/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
@@ -8,7 +8,9 @@
             </span>
         </div>
         <div class="slds-col slds-size_10-of-12">
-            <h1 class="navds-heading navds-heading--large spacing-bottom spacing-top">{title}</h1>
+            <h1 class="navds-heading navds-heading--large spacing-bottom spacing-top" role="alert" aria-live="polite">
+                {title}
+            </h1>
         </div>
         <div class="slds-col slds-size_2-of-12"></div>
         <div class="slds-col slds-size_10-of-12">
