--- a/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
+++ b/force-app/main/default/lwc/communityConfirmation/communityConfirmation.html
@@ -7,10 +7,9 @@
                 </svg>
             </span>
         </div>
+        <div role="alert" class="sr-only">{title}</div>
         <div class="slds-col slds-size_10-of-12">
-            <h1 class="navds-heading navds-heading--large spacing-bottom spacing-top" role="alert" aria-live="polite">
-                {title}
-            </h1>
+            <h1 class="navds-heading navds-heading--large spacing-bottom spacing-top" role="alert">{title}</h1>
         </div>
         <div class="slds-col slds-size_2-of-12"></div>
         <div class="slds-col slds-size_10-of-12">
