set max thread count for bto

--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -166,7 +166,7 @@
                         aria-disabled="false"
                         onclick={handleShowTextArea}
                     >
-                        Skriv ny melding
+                        {newThreadLabel}
                     </button>
                 </template>
             </template>
