set inbox info text to the left

--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -36,7 +36,7 @@
             </div>
         </template>
         <template lwc:if={noItems}>
-            <div class="slds-var-p-vertical_large center-info-box">
+            <div class="slds-var-p-vertical_large">
                 <c-community-alert
                     alert-type="info"
                     alert-text="Du har ingen meldinger i innboksen din."
