update news text class

--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.html
@@ -58,7 +58,7 @@
                     <template for:each={newsList} for:item="news">
                         <c-community-expandable-panel title={news.header} key={news.id}>
                             <lightning-formatted-rich-text
-                                class="navds-body-short navds-body-short--small"
+                                class="navds-body-long navds-body-long--medium"
                                 value={news.body}
                             ></lightning-formatted-rich-text>
                         </c-community-expandable-panel>
