remove olddesign and let events bubble through shadow dom

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -45,8 +45,8 @@
             card-title={cardTitle}
             show-close={showClose}
             check-medskriv={checkMedskriv}
-            onsubmitfromparent={handleSubmit}
-            onclosedevent={handleClosed}
+            onmessagesentonsubmit={handleMessageSentFromThreadViewer}
+            onthreadclosed={handleThreadClosed}
             new-design
             is-thread={isThread}
             is-case-reserved={isCaseReserved}
