added error box to thread viewer

--- a/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.html
+++ b/force-app/main/default/lwc/communityThreadViewer/communityThreadViewer.html
@@ -90,5 +90,14 @@
             </template>
         </slot>
         <c-sto-end-dialogue-modal lwc:ref="childRef" onclosethread={handleCloseThread}></c-sto-end-dialogue-modal>
+        <c-alertdialog
+            header="Noe gikk galt"
+            content="Vennligst oppdater siden og prøv på nytt"
+            desktop-style="text-align: center; width: 50%;"
+            mobile-style="text-align: center; max-width: 100%;"
+            center-buttons
+            no-cancel-button
+        >
+        </c-alertdialog>
     </div>
 </template>
