remove old design

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.html
@@ -41,7 +41,7 @@
         <c-crm-sto-messaging
             record-id={recordId}
             object-api-name={objectApiName}
-            single-thread={singleThread}
+            single-thread
             card-title={cardTitle}
             show-close={showClose}
             check-medskriv={checkMedskriv}
