change link text

--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -9,13 +9,13 @@
         ></c-nav-Button>
         <div class="body">
             <p class="navds-body-long navds-body-long--large">
-                For meldinger om dokumenter og/eller informasjonsbrev se&#32;
+                Se brev og vedtak i&#32;
                 <a
                     href="https://www.nav.no/dokumentarkiv"
                     target="_self"
                     class="navds-link navds-link--action archive-link"
                     onclick={handleDocumentArchiveClick}
-                    >brev og vedtak</a
+                    >dokumentene dine</a
                 >
             </p>
         </div>
