add target self to a-tags

--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -40,8 +40,8 @@
                             <br />
                             <br />
                             Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
-                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner&nbsp;
-                            <a href="https://www.nav.no/saksbehandlingstider#foreldrepenger"
+                            <a href="https://www.nav.no/kontaktoss" target="_self">kontakter oss</a>. Du finner&nbsp;
+                            <a href="https://www.nav.no/saksbehandlingstider#foreldrepenger" target="_self"
                                 >saksbehandlingstiden på nav.no</a
                             >
                             &nbsp;eller i brev fra Nav.
