--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -1,5 +1,5 @@
 <template>
-    <a class={panelClass} href={linkUrl} onclick={handleNavigation} aria-label={linkSummary}>
+    <a class={panelClass} href={linkUrl} target="_self" onclick={handleNavigation} aria-label={linkSummary}>
         <div class="slds-grid text-padding align-status-row">
             <div class="slds-col slds-grow no-wrap-date">
                 <lightning-formatted-date-time
