--- a/force-app/main/default/lwc/stoRegisterThread/badUrlTemplate.html
+++ b/force-app/main/default/lwc/stoRegisterThread/badUrlTemplate.html
@@ -42,7 +42,7 @@
                             </svg>
                         </div>
                         <div>
-                            <a href="https://www.nav.no/" class="navds-link navds-link--action">Gå til forsiden</a>
+                            <a href="https://www.nav.no/" target="_self" class="navds-link navds-link--action">Gå til forsiden</a>
                         </div>
                     </li>
                 </ul>
