--- a/force-app/main/default/lwc/communityConversationNoteRelatedItem/communityConversationNoteRelatedItem.html
+++ b/force-app/main/default/lwc/communityConversationNoteRelatedItem/communityConversationNoteRelatedItem.html
@@ -1,5 +1,5 @@
 <template>
-    <a href={url}>
+    <a href={url} target="_self">
         <span class="navds-list__item-marker navds-list__item-marker--bullet">
             <svg
                 width="0.375rem"
